Fix overflowing

--- a/components/ui/Button/Button.module.scss
+++ b/components/ui/Button/Button.module.scss
@@ -175,11 +175,11 @@ $variants: default, primary, 'transparent', minimal, minimal-bright,
 }
 
 .button-icon-left {
-  margin-right: 1em;
+  margin-right: 0.5em;
 }
 
 .button-icon-right {
-  margin-left: 1em;
+  margin-left: 0.5em;
 }
 
 .stretched {
