--- a/pages/styles/index.module.scss
+++ b/pages/styles/index.module.scss
@@ -7,6 +7,7 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   video {
     object-fit: cover;
@@ -89,7 +90,6 @@
 }
 
 .tear {
-  // margin-top: -150px;
   position: absolute;
   bottom: -4px;
   left: 0;
